# foldex

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
api-client/: analysisApi.ts
app/: globals.css  layout.tsx  page.tsx
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
backend/app/: annotator.py  features.py  jobs.py  main.py  normalizer.py  parser.py  reporter.py  schemas.py  similarity.py  structures.py
backend/tests/: test_analysis_pipeline.py
components/: AnalysisActionsPanel.tsx  AnalysisHeader.tsx  AnalysisProteinPreview.tsx  Button.tsx  ComparisonTableSection.tsx  DiagnosticLogPanel.tsx  LiveAnalysis.tsx  MaterialIcon.tsx  Mol3DViewer.tsx  ProteinViewer.tsx  QuickIntake.tsx  RecentVariants.tsx  ReportStatsSidebar.tsx  ReportStructurePanel.tsx  ReportsFooter.tsx  ReportsHeader.tsx  SequenceAlignmentPanel.tsx  SimilarVariantsSection.tsx  SystemStatsPanel.tsx  VariantReportPanel.tsx
docs/: ARCHITECTURE.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
hooks/: use3DmolViewer.ts
layouts/: AnalysisFloatingActionButton.tsx  AppLayout.tsx  DashboardHeader.tsx  FloatingActionButton.tsx  SideNav.tsx
pages-client/: DashboardPage.css  DashboardPage.tsx  ReportsPage.css  ReportsPage.tsx
server/: annotator.ts  demo.ts  features.ts  http.ts  jobs.ts  pipeline.ts  queue.ts  reporter.ts  schemas.ts  similarity.ts  structures.ts
store/: analysisStore.ts
tests/: demoJob.test.ts  (+1 more)
(+47 files in other folders)
